--- a/_includes/list.html
+++ b/_includes/list.html
@@ -58,3 +58,5 @@
     %}
   {% endfor %}
 {% endfor %}
+
+{% include list.html component="card" data="projects" filter="group == 'newsletter'" style="small" %}
