Fix error on structure

--- a/_includes/list.html
+++ b/_includes/list.html
@@ -59,4 +59,4 @@
   {% endfor %}
 {% endfor %}
 
-{% include list.html component="card" data="projects" filter="group == 'newsletter'" style="small" %}
+<!-- Removed recursive include to prevent excessive nesting -->
