Change link photo

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -37,7 +37,7 @@
 {% assign icon = png | default: jpg | relative_url %}
 
 {% assign jpg = "images/share.jpg" | file_exists %}
-{% assign png = "images/share.png" | file_exists %}
+{% assign png = "images/icon_cb.png" | file_exists %}
 {% assign share = jpg | default: png | relative_url %}
 
 {% assign published = page.date | date_to_xmlschema %}
