enh update main page nav bar

--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -1,9 +1,6 @@
 ---
 ---
 
-$logo-big: 80px;
-$logo: 40px;
-$big-padding: 35px;
 $collapse: 700px;
 $sticky: true;
 
@@ -38,15 +35,6 @@ header a {
   max-width: 100%;
 }
 
-.logo {
-  height: $logo;
-}
-
-.logo > * {
-  width: unset;
-  height: 100%;
-}
-
 .title-text {
   display: flex;
   justify-content: flex-start;
@@ -60,11 +48,6 @@ header a {
 
 .title {
   font-size: var(--large);
-}
-
-.subtitle {
-  opacity: 0.65;
-  font-weight: var(--thin);
 }
 
 .nav-toggle {
@@ -112,57 +95,22 @@ nav > a:hover {
   color: var(--primary);
 }
 
-header:not([data-big]) {
-  @media (max-width: $collapse) {
+@media (max-width: $collapse) {
+  header {
     justify-content: flex-end;
-
-    .nav-toggle {
-      display: flex;
-    }
-
-    .nav-toggle:not(:checked) + nav {
-      display: none;
-    }
-
-    nav {
-      align-items: flex-end;
-      flex-direction: column;
-      width: 100%;
-    }
-  }
-}
-
-header[data-big] {
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: $big-padding 20px;
-
-  @if $sticky {
-    top: unset;
   }
 
-  .home {
+  .nav-toggle {
+    display: flex;
+  }
+
+  .nav-toggle:not(:checked) + nav {
+    display: none;
+  }
+
+  nav {
+    align-items: flex-end;
     flex-direction: column;
-    flex-grow: 0;
-  }
-
-  .logo {
-    height: $logo-big;
-    flex-shrink: 0;
-  }
-
-  .title-text {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-
-  .title {
-    font-size: var(--xxl);
-  }
-
-  .subtitle {
-    font-size: var(--large);
+    width: 100%;
   }
 }
