fix newsletter formatting

--- a/_styles/card.scss
+++ b/_styles/card.scss
@@ -50,3 +50,16 @@
   margin-top: -10px !important;
   font-style: italic;
 }
+
+.newsletter-grid {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: nowrap;
+  gap: 20px;
+}
+
+.newsletter-grid .card {
+  width: 200px;
+  margin: 0;
+}
