--- a/_styles/header.scss
+++ b/_styles/header.scss
@@ -11,7 +11,7 @@ header {
   flex-wrap: wrap;
   gap: 20px;
   padding: 20px;
-  background: #1e3a5f;
+  background: #1e3a5f !important;
   box-shadow: var(--shadow);
 
   @if $sticky {
